# villa_navigation

./: .gitignore  README.md  tags
edge_leg_detector/src/: detector.cpp
edge_leg_detector/src/edge_leg_detector/: detector.cpp
gaze_service/: CMakeLists.txt
gaze_service/scripts/: gazeaction_manager_test.py
human_filter/: CMakeLists.txt  package.xml
human_filter/cfg/: LegDetection.cfg
human_filter/include/: laser_processor.h
human_filter/include/people_tracking_filter/: edge_leg_filter_node.h  leg_op_filter_node.h  op_filter_tracker.h  service_test.h  service_test.h~
human_filter/launch/: backup_srs.launch  filter.launch  helpmecarry_op.launch  op_tracker_all.launch  person_following_service.launch  personfollowing_noservice.launch  srs_leg_detector_all.launch
human_filter/src/: backup_srs_leg_dector.cpp  backup_srs_leg_detector.cpp  edge_leg_filter_node.cpp  laser_processor.cpp  leg_op_filter_node.cpp  op_filter_tracker.cpp  op_tracker.cpp  people_tracking_node.cpp  service_test.cpp  srs_leg_detector.cpp  train_leg_detector.cpp
navi_mdp/: CMakeLists.txt
navi_mdp/include/: MDPmanager.h
navi_mdp/scripts/: speech_publish  wrist_mk  wrist_mk_client
navi_mdp/src/: MDPmanager.cpp  dynamic_planner.cpp  global_planner.cpp
srs_leg_detector/: CMakeLists.txt  package.xml
srs_leg_detector/src/: srs_leg_detector.cpp
villa_navi_service/: CMakeLists.txt  README.md  package.xml
villa_navi_service/config/: naviconfig.yaml
villa_navi_service/launch/: mymap.launch~  service.launch
villa_navi_service/scripts/: gui_move.py
villa_navi_service/src/: navi_service_node.cpp  service_client.cpp  service_test.cpp  waypoint_client.cpp
visual_perception/: CMakeLists.txt
visual_perception/include/: human_belief.h
visual_perception/src/: grid_node.cpp  human_belief.cpp  people_marker.cpp
