<?xml version="1.0"?>
<package>
  <name>srs_leg_detector</name>
  <version>0.0.1</version>
  <description>A leg detector that identifies three different leg patterns based on the paper of Nicholas Belloto</description>

  <maintainer email="steveminq@gmail.com">Marco Antonio Becerra Pedraza</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>  
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>  
  <run_depend>sensor_msgs</run_depend>  
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>

  <export>
  </export>
</package>
